2008-07-13  Hans Breuer  <hans@breuer.org>

	* shapes/Cybernetics/*.png shapes/Gane_and_Sarson/*.png 
	  shapes/Logic/*.png shapes/Map/Isometric/*.png
	  shapes/Misc/*.png shapes/MSE/*.png : some icons were smaller than 
	the usual 22x22, now they are expanded by an empty border

2008-07-06  Hans Breuer  <hans@breuer.org>

	* lib/font.[hc] : some cleanup and test code to get on the real reason
	for Dia's notorious font-size mismatch, see e.g. bug #108293, #345538,
	#538499, ... not supposed to change behaviour yet
	* samples/font-sizes.dia : new test file using concrete fonts

2008-07-06  Hans Breuer  <hans@breuer.org>

	[Patch from Thomas Harding fixing help finally fixing bug #536334]
	* doc/Makefile.am hardcopies.make :
	- documentation uninstall was not complete
	- symlinks are done on $(helpdocdir)
	instead of $(DESTDIR)$(helpdocdir) to make packagers life easier
	(this results in dangling symlinks while $(DESTDIR) != "",
	then symlinks are correct while the package is installed from
	$(DESTDIR) to "/")

2008-06-29  Hans Breuer  <hans@breuer.org>

	[Patch from Thomas Harding fixing help generation for non-gnome case]
	* xmldocs.make : without gnome install to $(helpdocdir)
	* configure.in : initialize HAVE_XSLTPROC
	* hardcopies.make : conditionalize on HAVE_GNOME

	[Third iteration on patch from Thomas Harding improving the 
	 documentation generation, closing bug #465460]
	* doc/en/Makefile.am doc/fr/Makefile.am doc/eu/Makefile.am
	  doc/pl/Makefile.am : deleting $(xmlsources)
	* hardcopies.make : corrected paths to fit --psdir --pdfdir --htmldir
	./configure switches; corrected targets $(progname)(.pdf|.ps|_html) 
	and .jw: to depend on $(xml_files) instead of (duplicate of xml_files)

	* doc/fr/dia-cmdline.xml doc/eu/dia-1.xml : added, bug #465460
	* doc/eu/dia.1 : updated

	* configure.in bindings/Makefile.am : some more autotools trial and 
	error not fixing bug #540694 - help appreciated

2008-06-27  Hans Breuer  <hans@breuer.org>
